--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,19 @@
 {
   "name": "Awdarma",
-  "version": "0.0.4",
+  "version": "0.0.6",
   "description": "Awdarma.uz chrome extension",
-  "permissions": ["activeTab", "https://api.diyarbek.uz/*"],
+  "permissions": [
+    "activeTab", 
+    "https://api.diyarbek.uz/*",
+    "contextMenus",
+    "scripting"
+  ],
   "content_scripts": [{
     "matches": ["*://*/*"],
     "js": ["content.js"]
   }],
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "popup.js"
   },
   "web_accessible_resources": [
     {
@@ -26,6 +31,11 @@
     },
     "default_title": "Awdarma uz",
     "default_popup": "popup.html"
+  },
+  "icons": {
+    "16": "assets/icon-bitty.png",
+    "48": "assets/icon-small.png",
+    "128": "assets/icon-large.png"
   },
   "manifest_version": 3
 }
